--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,16 @@
           <version>1.1-rev-1</version>
       </dependency>
     <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+      <version>1.6.2</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <dependency>
       <groupId>javax.security.jacc</groupId>
       <artifactId>javax.security.jacc-api</artifactId>
       <version>1.6</version>
